* Added an OpenIMAJAudioFileDataSource for sphinx4 integration (as yet untested)